# ShadowBench

./: .gitignore  Dockerfile.sandbox  README.md  docker-compose.yml  pyproject.toml
analysis/: analyze_results.py
data/custom/: dataset.json
inspect_tasks/: common.py  dataset.py  reward_hacking.py  reward_hacking_agent.py  reward_hacking_instruct.py
