[project]
name = "shadowbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "google-genai>=1.52.0",
    "inspect-ai>=0.3.150",
    "matplotlib>=3.10.7",
    "openai>=2.8.1",
    "openrouter>=0.0.19",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]
